# Lite2D

./: .gitignore  CMakeLists.txt  InputManager.h  README.md  Renderer.h  TextRenderer.h  Texture.h  design.txt  hello.cpp  ltexture.cpp  ltexture.h  run_tests.sh  test_ecs.cpp  test_systems.cpp  timer.h
.cache/clangd/index/: Component.h.02765CC96C198FDA.idx  ComponentArray.h.FE75BBAFC3F836C0.idx  Entity.h.16F1632F762A836B.idx  EntityManager.cpp.288A3467F81D583B.idx  EntityManager.h.94C2D8A24CBD2CA9.idx  EntityManager.inl.2C04D4A670540BBD.idx  IComponentArray.h.66388D32C7D19B28.idx  InputManager.h.CEF07B78D07A4B8F.idx  MovementSystem.cpp.FD7F5954DB19E696.idx  MovementSystem.h.FA54D1BD83468F21.idx  Position.h.944502ADC91D2BC5.idx  RenderSystem.cpp.CA1073FB0460C489.idx  RenderSystem.h.12DE017B8635E84E.idx  Renderable.h.E5C8592CDE93128E.idx  Renderer.h.8F94308F17CB1444.idx  System.h.C5857DA0A237E4E8.idx  SystemManager.cpp.EB862F6C471F778C.idx  SystemManager.h.A7CCAF048471F4A8.idx  SystemManager.inl.5D3E9F53B7396A31.idx  TextRenderer.h.4167A1BC23FB7391.idx  Texture.h.D4CEFE858352EBFF.idx  Velocity.h.D76B29ED2830C635.idx  hello.cpp.798D1A85BC1CBB56.idx  test_component_array.cpp.9E403CA99BB8FD52.idx  test_ecs.cpp.965BFC36FB3C7B70.idx  test_entity_manager.cpp.CBD122FC8E04404F.idx  test_integration.cpp.660DF18027BD2BE6.idx  test_main.cpp.6C82ABCBCFC7A553.idx  test_movement_system_performance.cpp.F165BAC554D5E100.idx  test_system_manager.cpp.A810502E54A71AC2.idx  test_systems.cpp.76F1C6DD48A0EADD.idx  test_systems.cpp.9AB7AA00AC1DFC9A.idx  timer.h.5A1E9F880B573F74.idx
ECS/: ComponentArray.h  Entity.h  EntityManager.cpp  EntityManager.h  EntityManager.inl  IComponentArray.h  System.h  SystemManager.cpp  SystemManager.h  SystemManager.inl
ECS/Components/: Position.h
ECS/Systems/: MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
Games/: CMakeLists.txt
Games/Examples/: CMakeLists.txt
Games/Examples/BouncingBalls/: test_systems.cpp
Games/Examples/Particles/: README.md  main.cpp
Games/Examples/Particles/Components/: Particle.h
Games/Examples/Particles/Game/: ParticleGame.cpp  ParticleGame.h
Games/Examples/Particles/Systems/: CollisionSystem.cpp  CollisionSystem.h  ParticleSystem.cpp  ParticleSystem.h
Games/Snake/: CMakeLists.txt  main.cpp
Games/Snake/Components/: Food.cpp  Food.h  GameState.cpp  GameState.h  SnakeHead.cpp  SnakeHead.h  SnakeSegment.cpp  SnakeSegment.h  Wall.cpp  Wall.h
Games/Snake/Game/: SnakeGame.cpp  SnakeGame.h
Games/Snake/Systems/: CollisionSystem.cpp  CollisionSystem.h  GameLogicSystem.cpp  GameLogicSystem.h  InputSystem.cpp  InputSystem.h  SnakeMovementSystem.cpp  SnakeMovementSystem.h
examples/: CMakeLists.txt  hello.cpp
src/ECS/: Component.h  ComponentArray.h  Entity.h  EntityManager.cpp  EntityManager.h  SystemManager.h
src/ECS/Components/: Renderable.h  Velocity.h
src/ECS/Systems/: MovementSystem.h
src/Rendering/: RenderSystem.cpp  RenderSystem.h  TextRenderer.h
tests/: CMakeLists.txt  README.md  test_component_array.cpp  test_movement_system_performance.cpp  test_system_manager.cpp  test_system_manager_old.cpp
tests/unit/: test_entity_manager.cpp  test_movement_system_performance.cpp  test_system_manager_fixed.cpp  test_system_manager_old.cpp
